[package]
name = "netmet"
version = "0.1.0"
edition = "2021"
[lib]
name = "sysmetrics"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.25.1"
ubyte = "0.10.2"

[profile.release]
lto = true
codegen-units = 1
debug = 1

[rust]
debuginfo-level = 1